--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Mirrored from whc.peacefulqode.com/index.php?language=spanish by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 04 Sep 2022 05:56:35 GMT -->
+<!-- Mirrored from businessasesores.github.io/page/?language=spanish by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 04 Sep 2022 05:56:35 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
 <head>
     <meta charset="utf-8" />
@@ -476,5 +476,5 @@ This is a sample announcement. Announcements are a great way to keep your
 
 </body>
 
-<!-- Mirrored from whc.peacefulqode.com/index.php?language=spanish by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 04 Sep 2022 05:56:35 GMT -->
+<!-- Mirrored from businessasesores.github.io/page/?language=spanish by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 04 Sep 2022 05:56:35 GMT -->
 </html>
