--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Administración - Hostingo</title>
+    <title>Business asesores</title>
 
     <!-- Styling -->
 <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600|Raleway:400,700" rel="stylesheet">
@@ -45,94 +45,7 @@
 <section id="header">
     <div class="container">
         <ul class="top-nav">
-                            <li>
-                    <a href="#" class="choose-language" data-toggle="popover" id="languageChooser">
-                        Español
-                        <b class="caret"></b>
-                    </a>
-                    <div id="languageChooserContent" class="hidden">
-                        <ul>
-                                                            <li>
-                                    <a href="indexed62-2.html?language=arabic">العربية</a>
-                                </li>
-                                                            <li>
-                                    <a href="index2a07-2.html?language=azerbaijani">Azerbaijani</a>
-                                </li>
-                                                            <li>
-                                    <a href="indexac7b-2.html?language=catalan">Català</a>
-                                </li>
-                                                            <li>
-                                    <a href="indexb719-2.html?language=chinese">中文</a>
-                                </li>
-                                                            <li>
-                                    <a href="index3e07-2.html?language=croatian">Hrvatski</a>
-                                </li>
-                                                            <li>
-                                    <a href="index1ff1-2.html?language=czech">Čeština</a>
-                                </li>
-                                                            <li>
-                                    <a href="index6c6e-2.html?language=danish">Dansk</a>
-                                </li>
-                                                            <li>
-                                    <a href="indexfb36-2.html?language=dutch">Nederlands</a>
-                                </li>
-                                                            <li>
-                                    <a href="index59a8-2.html?language=english">English</a>
-                                </li>
-                                                            <li>
-                                    <a href="indexa384-2.html?language=estonian">Estonian</a>
-                                </li>
-                                                            <li>
-                                    <a href="index1bad-2.html?language=farsi">Persian</a>
-                                </li>
-                                                            <li>
-                                    <a href="index983d-2.html?language=french">Français</a>
-                                </li>
-                                                            <li>
-                                    <a href="index28d4-2.html?language=german">Deutsch</a>
-                                </li>
-                                                            <li>
-                                    <a href="indexd9af-2.html?language=hebrew">עברית</a>
-                                </li>
-                                                            <li>
-                                    <a href="index0494-2.html?language=hungarian">Magyar</a>
-                                </li>
-                                                            <li>
-                                    <a href="index6e5a-2.html?language=italian">Italiano</a>
-                                </li>
-                                                            <li>
-                                    <a href="indexb2fa-2.html?language=macedonian">Macedonian</a>
-                                </li>
-                                                            <li>
-                                    <a href="indexfcce-2.html?language=norwegian">Norwegian</a>
-                                </li>
-                                                            <li>
-                                    <a href="index26ea-2.html?language=portuguese-br">Português</a>
-                                </li>
-                                                            <li>
-                                    <a href="index6a35-2.html?language=portuguese-pt">Português</a>
-                                </li>
-                                                            <li>
-                                    <a href="indexa582-2.html?language=romanian">Română</a>
-                                </li>
-                                                            <li>
-                                    <a href="indexb57d-2.html?language=russian">Русский</a>
-                                </li>
-                                                            <li>
-                                    <a href="indexad1d-2.html?language=spanish">Español</a>
-                                </li>
-                                                            <li>
-                                    <a href="index7fac-2.html?language=swedish">Svenska</a>
-                                </li>
-                                                            <li>
-                                    <a href="indexac68-2.html?language=turkish">Türkçe</a>
-                                </li>
-                                                            <li>
-                                    <a href="indexc941-2.html?language=ukranian">Українська</a>
-                                </li>
-                                                    </ul>
-                    </div>
-                </li>
+                         
                                         <li>
                     <a href="login.html">Entrar</a>
                 </li>
@@ -266,7 +179,7 @@
     <section id="home-banner">
         <div class="container text-center">
                             <h2>ENCUENTRA TU NOMBRE DE DOMINIO PERFECTO...</h2>
-                <form method="post" action="https://whc.peacefulqode.com/domainchecker.php" id="frmDomainHomepage">
+                <form method="post" action="#" id="frmDomainHomepage">
 <input type="hidden" name="token" value="b0c328f76d14312d7dcbfc968a7565d0baaca1e4" />
                     <input type="hidden" name="transfer" />
                     <div class="row">
