--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </li>
                                 </ul>
 
-                    <a href="index-2.html" class="logo logo-text">Hostingo</a>
+                    <a href="index.html" class="logo logo-text">Business asesores</a>
         
     </div>
 </section>
@@ -104,7 +104,7 @@
                                             </a>
                 </li>
                             <li menuItemName="Register a New Domain" id="Primary_Navbar-Store-Register_a_New_Domain">
-                    <a href="cart2029.html?a=add&amp;domain=register">
+                    <a href="cart8797.html?a=add&amp;domain=register">
                                                 Registrar Dominios
                                             </a>
                 </li>
@@ -179,7 +179,7 @@
     <section id="home-banner">
         <div class="container text-center">
                             <h2>ENCUENTRA TU NOMBRE DE DOMINIO PERFECTO...</h2>
-                <form method="post" action="https://businessasesores.github.io/page/domainchecker.php" id="frmDomainHomepage">
+                <form method="post" action="https://businessasesores.github.io/page/cart8797.html?a=add&amp;domain=register" id="frmDomainHomepage">
 <input type="hidden" name="token" value="b0c328f76d14312d7dcbfc968a7565d0baaca1e4" />
                     <input type="hidden" name="transfer" />
                     <div class="row">
