--- a/index.html
+++ b/index.html
@@ -179,16 +179,18 @@
     <section id="home-banner">
         <div class="container text-center">
                             <h2>ENCUENTRA TU NOMBRE DE DOMINIO PERFECTO...</h2>
-                <form method="post" action="https://businessasesores.github.io/page/cart8797.html?a=add&domain=register" 
-
+                <form method="post" action="https://businessasesores.github.io/page/cart8797.html?a=add&domain=register" id="frmDomainHomepage">
+                              <input type="hidden" name="token" value="b0c328f76d14312d7dcbfc968a7565d0baaca1e4" />
                     <input type="hidden" name="transfer" />
                     <div class="row">
                         <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1">
                             <div class="input-group input-group-lg">
                                 <input type="text" class="form-control" name="domain" placeholder="ej: example.com" autocapitalize="none" data-toggle="tooltip" data-placement="left" data-trigger="manual" title="Necesario" />
+                                <span class="input-group-btn">
+                                  <input type="submit" class="btn search" value="Buscar" id="btnDomainSearch" />
                                 
-                                                                            <input type="submit" class="btn search" value="Buscar" id="enviar" />
-                                                                                                                <input type="submit" id="btnTransfer" class="btn transfer" value="Transferir" />
+                                                                            
+                                <input type="submit" id="btnTransfer" class="btn transfer" value="Transferir" />
                                                                     </span>
                             </div>
                         </div>
