--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <!-- Mirrored from businessasesores.github.io/page/?language=spanish by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 04 Sep 2022 05:56:35 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
+<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /> <!-- /Added by HTTrack -->
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,8 +15,8 @@
 <link href="assets/css/fontawesome-all.min.css" rel="stylesheet">
 <link href="templates/six/css/custom.css" rel="stylesheet">
 
-HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries 
-WARNING: Respond.js doesn't work if you view the page via file:// 
+<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 [if lt IE 9]>
   <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
   <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
@@ -180,11 +180,11 @@ WARNING: Respond.js doesn't work if you view the page via file://
         <div class="container text-center">
                             <h2>ENCUENTRA TU NOMBRE DE DOMINIO PERFECTO...</h2>
                 <form method="post" action="https://businessasesores.github.io/page/cart8797.html?a=add&domain=register" id="frmDomainHomepage">
-                              <input type="hidden" name="token" value="b0c328f76d14312d7dcbfc968a7565d0baaca1e4" />
+                              
                     <input type="hidden" name="transfer" />
                     <div class="row">
                         <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1">
-                            <div class="input-group input-group-lg">
+                            
                                 <input type="text" class="form-control" name="domain" placeholder="ej: example.com" autocapitalize="none" data-toggle="tooltip" data-placement="left" data-trigger="manual" title="Necesario" />
                                 <span class="input-group-btn">
                                   <input type="submit" class="btn search" value="Buscar" id="btnDomainSearch" />
