--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-[if lt IE 9]
+
   <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
   <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 <![endif]-->
@@ -185,7 +185,7 @@
                     <div class="row">
                         <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1">
                             <div class="input-group input-group-lg">
-                                
+                                <input type="text" class="form-control" name="domain" placeholder="ej: example.com" autocapitalize="none" data-toggle="tooltip" data-placement="left" data-trigger="manual" title="Necesario" />
                                 <span class="input-group-btn">
                                   <input type="submit" class="btn search" value="Buscar" id="btnDomainSearch" />
                                 
@@ -210,7 +210,7 @@
                 <div class="col-sm-12 col-md-8">
                     <ul>
                                                     <li>
-                                <a id="btnBuyADomain" href="cart2029.html">
+                                <a id="btnBuyADomain" href="page/cart8797.html">
                                     <i class="fas fa-globe"></i>
                                     <p>
                                         Comprar Dominio <span>&raquo;</span>
