--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
 <link href="assets/css/fontawesome-all.min.css" rel="stylesheet">
 <link href="templates/six/css/custom.css" rel="stylesheet">
 
+<!-- vinculando a libreria Jquery-->
+<p><script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script></p>
+
+<!-- vinculando a libreria Jquery-->
+<p><script src="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600|Raleway:400,700"></script></p>
+
+
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 
@@ -210,7 +217,7 @@
                 <div class="col-sm-12 col-md-8">
                     <ul>
                                                     <li>
-                                <a id="btnBuyADomain" href="page/cart8797.html">
+                                <a id="btnBuyADomain" href="cart8797.html">
                                     <i class="fas fa-globe"></i>
                                     <p>
                                         Comprar Dominio <span>&raquo;</span>
