--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Business asesores</title>
 
     <!-- Styling -->
-<link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600|Raleway:400,700" rel="stylesheet">
+<!-- <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600|Raleway:400,700" rel="stylesheet"> -->
 <link href="templates/six/css/all.minf946.css?v=5937de" rel="stylesheet">
 <link href="assets/css/fontawesome-all.min.css" rel="stylesheet">
 <link href="templates/six/css/custom.css" rel="stylesheet">
@@ -18,8 +18,6 @@
 <!-- vinculando a libreria Jquery-->
 <p><script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script></p>
 
-<!-- vinculando a libreria Jquery-->
-<p><script src="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600|Raleway:400,700"></script></p>
 
 
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
