--- a/index.html
+++ b/index.html
@@ -11,9 +11,19 @@
 
     <!-- Styling -->
 <!-- <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600|Raleway:400,700" rel="stylesheet"> -->
+<link rel="canonical" href="index.html" />
 <link href="templates/six/css/all.minf946.css?v=5937de" rel="stylesheet">
 <link href="assets/css/fontawesome-all.min.css" rel="stylesheet">
 <link href="templates/six/css/custom.css" rel="stylesheet">
+
+
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<!-- Temas-->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+
+
+
 
 <!-- vinculando a libreria Jquery-->
 <p><script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script></p>
