--- a/index.html
+++ b/index.html
@@ -62,7 +62,26 @@
                 </li>
                                 </ul>
 
-                    <a href="index.html" class="logo logo-text">Business asesores</a>
+                    </nav>
+     <nav             
+     </section>
+     <nav class="navbar navbar-light bg-light static-top">
+     <div class="container">
+     <header id="main-header">
+           <a id="logo-header" href="#">
+           <div class="logo-container">
+                <div class="logo">
+                    <img src="assets/img/new_logo.png" alt="">
+                         <div
+
+                    <div
+			       <span class="site-name">Business / Asesores</span>
+			       <span class="site-desc">MarKeting DigiTal</span>
+                               </a> <!-- / #logo-header -->    
+                           </div    
+                       </nav><!-- / nav -->
+                           
+
         
     </div>
 </section>
