--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
            <a id="logo-header" href="https://businessasesores.ga">
            <div class="logo-container">
                 <div class="logo">
-                    <img src="https://hostligero.github.io/pagina/assets/img/new_logo.png" alt="Business / Asesores<"
+			</li> 
+                    <img src="https://hostligero.github.io/pagina/assets/img/new_logo.png" alt=""
                        class="logo logo-text">Business asesores</a> 
                        </a> 
 			    
