--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     </a>
                 </li>
                         </ul>      
-               
+               </div>
     
                </ul> 
            <a id="logo-header" href="https://businessasesores.ga">
