--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   
                 <div class="logo">
 			
-                    <img src="https://hostligero.github.io/pagina/assets/img/new_logo.png" alt=""
+                    <img src="assets/img/pic/g95e8.webp" alt=""
            
                        class="logo logo-text">Business asesores</a> 
                        </a> 
