--- a/index.html
+++ b/index.html
@@ -67,9 +67,8 @@
   
                 <div class="logo">
 			
-                    <img src="assets/img/pic/g95e8.webp" alt=""
+                    <img src="assets/img/pic/g95e8.webp" ;" title="Salsa al Parque"></div>
            
-                       class="logo logo-text">Business asesores</a> 
                        </a> 
 			    
                        </li>
