--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   
                 <div class="logo">
 			
-                    <img src="assets/img/pic/g95e8.webp" ;" title="Salsa al Parque"></div>
+                    <img src="assets/img/pic/g95e8.webp" ;" title="Hosting Dominios | Business asesores"></div>
            
                        </a> 
 			    
