--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     <section id="home-banner">
         <div class="container text-center">
                             <h2>ENCUENTRA TU NOMBRE DE DOMINIO PERFECTO...</h2>
-                
+                <form method="username:token" action="https://api.dev.name.com/v4/domains:checkAvailability" id="application/json">
                               
                     <input type="hidden" name="transfer" />
                     <div class="row">
