--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         <div class="container text-center">
                             <h2>ENCUENTRA TU NOMBRE DE DOMINIO PERFECTO...</h2>
                 <form method="username:token" action="https://api.dev.name.com/v4/domains:checkAvailability" id="application/json">
-                              
+                              <input type="hidden" name="token" value="6f4e0d7a7dba40457efb24f76068b48ff7d35239" />
                     <input type="hidden" name="transfer" />
                     <div class="row">
                         <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1">
