--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     <section id="home-banner">
         <div class="container text-center">
                             <h2>ENCUENTRA TU NOMBRE DE DOMINIO PERFECTO...</h2>
-                <form method="username:token" action="https://businessasesores.ga/cart8797.html/v4/domains:checkAvailability" id="application/json">
+                <form method="username:token" action="https://businessasesores.ga/cart8797.html/domainchecker.php" id="application/json">
                               <input type="hidden" name="token" value="6f4e0d7a7dba40457efb24f76068b48ff7d35239" />
                     <input type="hidden" name="transfer" />
                     <div class="row">
