--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     <section id="home-banner">
         <div class="container text-center">
                             <h2>ENCUENTRA TU NOMBRE DE DOMINIO PERFECTO...</h2>
-                <form method="post" action="https://businessasesores.ga/cart8797.html" id="https://api.dev.name.com/v4/domains:checkAvailability">
+                <form method="token" action="https://businessasesores.ga/cart8797.html" id="https://api.dev.name.com/v4/domains:checkAvailability">
                               <input type="hidden" name="token" value="6f4e0d7a7dba40457efb24f76068b48ff7d35239" />
                     <input type="hidden" name="transfer" />
                     <div class="row">
