--- a/cart2029.html
+++ b/cart2029.html
@@ -56,7 +56,7 @@
                                     <a href="cart812e.html?a=add&amp;domain=register&amp;language=english">English</a>
                                 </li>
                                                             <li>                                  
-                                    <a href="cart8797.html?a=add&amp;domain=register&amp;language=spanish">Español</a>
+                                    <a href="cart2029.html?a=add&amp;domain=register&amp;language=spanish">Español</a>
                                 </li>                                     
                                                     </ul>
                     </div>
@@ -292,7 +292,7 @@
 
             <div class="domain-checker-container">
                 <div class="domain-checker-bg clearfix">
-                    <form method="post" action="https://businessasesores.ga/cart.html" id="frmDomainChecker">
+                    <form method="post" action="https://api.dev.name.com/v4/domains:checkAvailability" id="frmDomainChecker">
 <input type="hidden" name="token" value="6f4e0d7a7dba40457efb24f76068b48ff7d35239" />
                         <input type="hidden" name="a" value="checkDomain">
                         <div class="row">
