--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
     <section id="home-banner">
         <div class="container text-center">
                             <h2>ENCUENTRA TU NOMBRE DE DOMINIO PERFECTO...</h2>
-                <form method="token" action="https://businessasesores.ga/cart2029.html?a=add&domain=register&query=" id="https://api.dev.name.com/v4/domains:checkAvailability">
-                              <input type="hidden" name="token" value="6f4e0d7a7dba40457efb24f76068b48ff7d35239" />
+                <form method="token" action="https://businessasesores.ga/web/domainnameapi.php?a=add&domain=register&query=" id="frmDomainHomepage">
+                              <input type="hidden" name="lionilustre" value="Gapoiza0393" />
                     <input type="hidden" name="transfer" />
                     <div class="row">
                         <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1">
