--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
     <section id="home-banner">
         <div class="container text-center">
                             <h2>ENCUENTRA TU NOMBRE DE DOMINIO PERFECTO...</h2>
-                <form method="token" action="https://businessasesores.ga/web/domainnameapi.php?a=add&domain=register&query=" id="frmDomainHomepage">
-                              <input type="hidden" name="lionilustre" value="Gapoiza0393" />
+                <form method="token" action="https://businessasesores.ga/web/domainnameapi.php" id="frmDomainHomepage">
+                              <input type="token" name="lionilustre" value="Gapoiza0393" />
                     <input type="hidden" name="transfer" />
                     <div class="row">
                         <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1">
