--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 
     <section id="home-banner">
         <div class="container text-center">
-               <form method="token" action="https://businessasesores.ga/cart2029.html?domainnameapi.php" id="web/domainnameapi.php">
+               <form method="token" action="https://businessasesores.ga/domainnameapi.php" id="web/domainnameapi.php">
                               <input type="hidden" name="token" value="6f4e0d7a7dba40457efb24f76068b48ff7d35239" />
                     <input type="hidden" name="transfer" />
                     <div class="row">
