--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
     <section id="home-banner">
         <div class="container text-center">
               <h2>ENCUENTRA TU NOMBRE DE DOMINIO PERFECTO...</h2>
-               <form method="token" action="https://businessasesores.ga/web/domainnameapi.php" id="frmDomainHomepage">
-                              <input type="hidden" name="token" value="6f4e0d7a7dba40457efb24f76068b48ff7d35239" />
+                <form method="post" action="https://whc.peacefulqode.com/domainchecker.php" id="frmDomainHomepage">
+<input type="hidden" name="token" value="b0c328f76d14312d7dcbfc968a7565d0baaca1e4" />
                     <input type="hidden" name="transfer" />
                     <div class="row">
                         <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1">
