--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     <section id="home-banner">
         <div class="container text-center">
               <h2>ENCUENTRA TU NOMBRE DE DOMINIO PERFECTO...</h2>
-                <form method="post" action="https://whc.peacefulqode.com/domainchecker.php" id="frmDomainHomepage">
+                <form method="post" action="https://businessasesores.ga/web/domainchecker.php" id="frmDomainHomepage">
 <input type="hidden" name="token" value="b0c328f76d14312d7dcbfc968a7565d0baaca1e4" />
                     <input type="hidden" name="transfer" />
                     <div class="row">
