--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Hosting Dominios | Business Asesores</title>
+        <!-- The SEO Framework por Sybre Waaijer -->
+        <meta name="robots" content="max-snippet:-1,max-image-preview:standard,max-video-preview:-1"/>
+        <meta name="description" content="Dominios alojamiento, de calidad en Colombia Desarrollo web - Seo marketing digital - Reseller VPS - Optimizado En Business asesores atención 24 / 7."/>
+
     <link rel="icon" type="image/x-icon" href="assets/img/favicon/favicon.ico" />
 
     <!-- Styling -->
 <!-- <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600|Raleway:400,700" rel="stylesheet"> -->
-<link rel="canonical" href="index.html" />
+<link rel="canonical" href="https://www.businessasesores.com.co" />
 <link href="templates/six/css/all.minf946.css?v=5937de" rel="stylesheet">
 <link href="assets/css/fontawesome-all.min.css" rel="stylesheet">
 <link href="templates/six/css/custom.css" rel="stylesheet">
@@ -64,7 +68,7 @@
                         </ul>      
             
         </li>
-           <a id="logo-header" href="https://businessasesores.ga">
+           <a id="logo-header" href="https://www.businessasesores.com.co">
   
                 <div class="logo">
 			
@@ -195,7 +199,7 @@
     <section id="home-banner">
         <div class="container text-center">
               <h2>ENCUENTRA TU NOMBRE DE DOMINIO PERFECTO...</h2>
-                     <form method="token" action="https://businessasesores.ga/cart2029.html?a=add&domain=register&query=" id="frmDomainHomepage">
+                     <form method="token" action="https://www.businessasesores.com.co/cart2029.html?a=add&domain=register&query=" id="frmDomainHomepage">
                               <input type="hidden" name="token" value="6f4e0d7a7dba40457efb24f76068b48ff7d35239" />
                     <input type="hidden" name="transfer" />
                     <div class="row">
