--- a/404.html
+++ b/404.html
@@ -2,25 +2,27 @@
 <head>
 <link rel="canonical" href="404.html" />
 <title>OPSS ERROR 404</title>
-<link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
-
+<link rel="icon" type="image/x-icon" href="assets/img/favicon/favicon.ico" />
 <link rel="stylesheet" media="all" href="themes/custom/mile_theme/assets/css/404.css?regh8w" />
 
-<div class="noise"></div>
-<div class="overlay"></div>
-<div class="terminal">
-  <h1>Error <span class="errorcode">404</span></h1>
-  <p class="output">Hola: no hay problema?  la pagina solicitada no existe o fue eliminada; por favor tenga precaucion al indexar? cualquier contenido. </p>
-  <p class="output">ver politicas<a href="https://www.lionilustre.ga"> Verlas </a> Regresar <a href="https://www.lionilustre.ga">Pagina Principal.</a>.</p>
+
+
+<body>
+  <section id="not-found">
+    <div id="title">Simple Pure CSS3 &bull; 404 Error Page</div>
+    <div class="circles">
+      <p>404<br>
+       <small>PAGE NOT FOUND</small>
+      </p>
+      <span class="circle big"></span>
+      <span class="circle med"></span>
+      <span class="circle small"></span>
+     <p class="output">Hola: no hay problema?  la pagina solicitada no existe o fue eliminada; por favor tenga precaucion al indexar? cualquier contenido. </p>
+  <p class="output">ver politicas<a href="https://www.businessasesores.com.co"> Verlas </a> Regresar <a href="https://www.businessasesores.com.co">Pagina Principal.</a>.</p>
   <p class="output">Ponte a Salvo.</p>
-</div>
-
-     </body>
-</html>
-
-
-
-
+    </div>
+  </section>
+ </body>
 
 
 
