--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <link rel="canonical" href="404.html" />
 <title>OPSS ERROR 404</title>
 <link rel="icon" type="image/x-icon" href="assets/img/favicon/favicon.ico" />
-<link rel="stylesheet" media="all" href="themes/custom/mile_theme/assets/css/404.css?regh8w" />
+<link rel="stylesheet" media="all" href="assets/css/404.css?regh8w" />
 
 
 
