--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 
 <head>
-<link rel="canonical" href="404.html" />
+
 <title>OPSS ERROR 404</title>
 <link rel="icon" type="image/x-icon" href="assets/img/favicon/favicon.ico" />
 <link rel="stylesheet" media="all" href="assets/css/404.css?regh8w" />
@@ -9,20 +9,18 @@
 
 <body>
   <section id="not-found">
-    <div id="title">Simple Pure CSS3 &bull; 404 Error Page</div>
+    <div id="title"tenga precaucion al indexar? cualquier contenido. &bull; 404 Error Page</div>
     <div class="circles">
       <p>404<br>
-       <small>PAGE NOT FOUND</small>
+       <small>Pagina eliminada</small>
       </p>
       <span class="circle big"></span>
       <span class="circle med"></span>
       <span class="circle small"></span>
-     <p class="output">Hola: no hay problema?  la pagina solicitada no existe o fue eliminada; por favor tenga precaucion al indexar? cualquier contenido. </p>
-  <p class="output">ver politicas<a href="https://www.businessasesores.com.co"> Verlas </a> Regresar <a href="https://www.businessasesores.com.co">Pagina Principal.</a>.</p>
-  <p class="output">Ponte a Salvo.</p>
     </div>
   </section>
  </body>
+</html>
 
 
 
