--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                             <div class="input-group input-group-lg">
                                 <input type="text" class="form-control" name="domain" placeholder="ej: example.com" autocapitalize="none" data-toggle="tooltip" data-placement="left" data-trigger="manual" title="Necesario" />
                                 <span class="input-group-btn">
-                                  <input type="submit" class="btn search" value="Buscar" id="btnDomainSearch" />
+                                  <input type="submit" class="btn btn-success search" value="Buscar" id="btnDomainSearch" />
                                 
                                                                             
                                 <input type="submit" id="btnTransfer" class="btn transfer" value="Transferir" />
