--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                             <div class="input-group input-group-lg">
                                 <input type="text" class="form-control" name="domain" placeholder="ej: example.com" autocapitalize="none" data-toggle="tooltip" data-placement="left" data-trigger="manual" title="Necesario" />
                                 <span class="input-group-btn">
-                                  <input type="submit" class="btn btn-success search" value="Buscar" id="btnDomainSearch" />
+                                  <input type="submit" class="btn btn-success" value="Buscar" id="btnDomainSearch" />
                                 
                                                                             
                                 <input type="submit" id="btnTransfer" class="btn transfer" value="Transferir" />
@@ -413,5 +413,5 @@ This is a sample announcement. Announcements are a great way to keep your
 
 </body>
 
-<!-- Mirrored from businessasesores.github.io/page/?language=spanish by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 04 Sep 2022 05:56:35 GMT -->
+<!-- Mirrored from businessasesores.com.co/?language=spanish by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 04 Sep 2022 05:56:35 GMT -->
 </html>
