--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <a href="register.html">Registrarse</a>
                     </li>
                                 <li class="primary-action">
-                    <a href="cart14c8.html?a=view" class="btn">
+                    <a href="cart14c8.html?a=view" class="btn search">
                         Ver Carrito
                     </a>
                 </li>
@@ -207,7 +207,7 @@
                             <div class="input-group input-group-lg">
                                 <input type="text" class="form-control" name="domain" placeholder="ej: example.com" autocapitalize="none" data-toggle="tooltip" data-placement="left" data-trigger="manual" title="Necesario" />
                                 <span class="input-group-btn">
-                                  <input type="submit" class="btn btn-success" value="Buscar" id="btnDomainSearch" />
+                                  <input type="submit" class="btn search" value="Buscar" id="btnDomainSearch" />
                                 
                                                                             
                                 <input type="submit" id="btnTransfer" class="btn transfer" value="Transferir" />
@@ -232,7 +232,7 @@
                 <div class="col-sm-12 col-md-8">
                     <ul>
                                                     <li>
-                                <a id="btnBuyADomain" href="cart8797.html">
+                                <a id="btnBuyADomain" href="cart2029.html">
                                     <i class="fas fa-globe"></i>
                                     <p>
                                         Comprar Dominio <span>&raquo;</span>
