--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                                     <li>
                         <a href="register.html">Registrarse</a>
                     </li>
-                                <li class="primary-action">
-                    <a href="cart14c8.html?a=view" class="btn search">
+                                <li class="input-group-btn">
+                    <a href="cart14c8.html" class="btn search">
                         Ver Carrito
                     </a>
                 </li>
