--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
         <ul class="top-nav">
                          
                       <li>
-                    <a href="login.html">Entrar</a>
+                    <a href="login.html">ingresar</a>
                 </li>
                                     <li>
-                        <a href="register.html">Registrarse</a>
+                        <a href="register.html">registrarse</a>
                     </li>
-                                <li class="input-group-btn">
+                                <li class="btn search">
                     <a href="cart14c8.html" class="btn search">
-                        Ver Carrito
+                        carrito
                     </a>
                 </li>
                         </ul>      
