--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <a href="register.html">registrarse</a>
                     </li>
                                 <li class="btn search">
-                    <a href="cart14c8.html" class="btn search">
+                          <input type="submit" class="btn search" value="Buscar" id="cart14c8.html" />
                         carrito
                     </a>
                 </li>
