--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
                                     <li>
                         <a href="register.html">registrarse</a>
                     </li>
-                                <li class="btn search">
-                          <input type="submit" class="btn search" value="Buscar" id="cart14c8.html" />
-                        carrito
+                               <li class="primary-action">
+                    <a href="cart14c8.html?a=view" ><i class="fas fa-cart"></i>
+                        Ver Carrito
                     </a>
                 </li>
                         </ul>      
