--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
            
                                li class="primary-action">
                     <a href="cart14c8.html?a=view" class="btn">
-                   rel="noopener"><span style="color: #FFFFFF">
-           <i class="fas fa-shopping-cart"> <strong>Registrar<strong> </a>    
+           <i class="fas fa-shopping-cart"> <strong>carrito<strong> </a>    
 
                     
                    </a>
