--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
                     </li>
                               
                     <li 
-          class="btn btn-success" role="button"data-toggle"<a href="cart14c8.html" rel="noopener">
+          class="btn btn-success" role="button"data-toggle"
+           <a href="cart14c8.html" rel="noopener">
            <span style="color: #FFFFFF"><i class="fas fa-shopping-cart"></i><strong>Carrito<strong>                    
             
                 </li>
