--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                               
                     <li 
           class="btn btn-success" role="button"data-toggle"
-           <a href="cart14c8.html" rel="noopener">
+           <a href="https://www.businessasesores.com.co/cart14c8.html?a=view" rel="noopener">
            <span style="color: #FFFFFF"><i class="fas fa-shopping-cart"></i> <strong> Carrito<strong>                    
             
                 </li>
