--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <a href="cart14c8.html?a=view"
           class="btn btn-success" role="button"data-toggle" rel="noopener">
          
-           fas fa-shopping-cart"></i> 
+          <i class="fas fa-shopping-cart"></i> 
             <strong> Carrito<strong>                    
             
                 </li>
