--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                     </li>
                               
                     <li class="primary-action">
-                    <a href="cart14c8.html?a=view"
-          class="btn btn-success"> <i class="fas fa-shopping-cart"></i> 
+                    <a href="cart14c8.html?a=view" class="btn">
+                    <i class="fas fa-shopping-cart"> </i> 
             <strong> Carrito<strong>                    
             
                 </li>
