--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
                         <a href="register.html">Registrarse</a>
                     </li>
                               
-                    <li class="primary-action">
-                    <a href="cart14c8.html?a=view" class="btn">
-                    <i class="fas fa-shopping-cart"> </i> 
-            <strong> Carrito<strong>                    
+                  <li class="primary-action">
+                    <a href="cart14c8.html?a=view"class="btn btn-success  search">
+                    <i class="fas fa-shopping-cart"></i> 
+                     <strong> Carrito<strong>                    
             
                 </li>
                         </ul>      
