--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
                                     <a href="cart812e.html?a=add&amp;domain=register&amp;language=english">English</a>
                                 </li>
                                                             <li>                                  
-                                    <a href="cart2029.html?a=add&amp;domain=register&amp;language=spanish">Español</a>
+                                    <a href="index.html?a=add&amp;domain=register&amp;language=spanish">Español</a>
                                 </li>                                     
                                                     </ul>
                     </div>
                 </li>
                                         <li>
-                    <a href="login.html">Entrar</a>
+                    <a href="login.html">Acceder</a> <i class="fas fa-shopping-user"> </i>
                 </li>
                                     <li>
                         <a href="register.html">Registrarse</a>
@@ -82,14 +82,14 @@
                      <strong> Carrito <strong> 
                    </a>                  
                 </li>
-                    </ul>
+                              </ul>
 
                    </li>
            <a id="logo-header" href="https://www.businessasesores.com.co">
              
               <div class="logo">
 
-          <img src="assets/img/pic/g95e8.webp"= ;" title="Hosting Dominios | Business asesores"></div> 
+          <img src="assets/img/pic/g95e8.webp" ;" title="Hosting Dominios | Business asesores"></div> 
 
 
             </a> 
