--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     </div>
                 </li>
                                         <li>
-                    <a href="login.html">Acceder</a> <i class="fas fa-shopping-user"> </i>
+                    <a href="login.html">Acceder</a> <i class="fas fa-user"> </i>
                 </li>
                                     <li>
                         <a href="register.html">Registrarse</a>
