--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
                     </div>
                 </li>
                                         <li>
-                    <a href="login.html">Acceder <i class="fas fa-user-circle"></a>
+                    <a href="login.html">Acceder< <i class="fas fa-user-circle"></i> </a>
+
                 </li>
                                     <li>
                         <a href="register.html">Registrarse</a>
