--- a/index.html
+++ b/index.html
@@ -71,14 +71,14 @@
                     </div>
                 </li>
                                         <li>
-                    <a href="login.html">Acceder< <i class="fas fa-user-circle"></i> </a>
+                    <a href="login.html">Acceder <i class="fas fa-user-circle"></i> </a>
 
                 </li>
                                     <li>
                         <a href="register.html">Registrarse</a>
                     </li>
                                 <li class="primary-action">
-                    <a href="cart14c8.html?a=view" class="btn-success">
+                    <a href="cart14c8.html?a=view" class="btn btn-success">
                         <i class="fas fa-shopping-cart"> </i> 
                      <strong> Carrito <strong> 
                    </a>                  
