--- a/index.html
+++ b/index.html
@@ -80,9 +80,8 @@
                                 <li class="primary-action">
                     <a href="cart14c8.html?a=view" class="btn btn-success">
                         <i class="fas fa-shopping-cart"> </i> 
-                     <strong> Carrito <strong> 
-                   </a>                  
-               
+                     <strong> Carrito <strong>  </a>                  
+                            </li>
                               </ul>
 
                    </li>
@@ -90,7 +89,7 @@
              
               <div class="logo">
 
-          <img src="assets/img/pic/g95e8.webp" ;" title="Hosting Dominios | Business asesores"
+          <img src="assets/img/pic/g95e8.webp" ;" title="Hosting Dominios | Business asesores"></div>
 
 
 </a> 
