--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                               </ul>
 
                    </li>
-           <a id="logo-header" href="https://www.businessasesores.com.co"> <li>
+           <a id="logo-header" href="https://www.businessasesores.com.co" </a>
              
               <div class="logo">
 
