--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 <section id="header">
     <div class="container">
-        <ul class="top-nav">
+        <ul class="top-nav"> </a>
                             <li>
                     <a href="#" class="choose-language" data-toggle="popover" id="languageChooser">
                         Español
@@ -85,10 +85,8 @@
                               </ul>
 
                    </li>
-           <a id="logo-header" href="https://www.businessasesores.com.co" alt="">
-             
-              <div class="logo">
-
+                    <div class="logo">
+           <a id="logo-header" href="https://www.businessasesores.com.co">
           <img src="assets/img/pic/g95e8.webp" ;" title="Hosting Dominios | Business asesores"></div>
 
 
