--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@ This is a sample announcement. Announcements are a great way to keep your
 <section id="footer">
     <div class="container">
         <a href="#" class="back-to-top"><i class="fas fa-chevron-up"></i></a>
-        <p>Copyright &copy; 2022 Hostingo. Todos los derechos reservados.</p>
+        <p> Business asesores &copy; 2022 </p>
     </div>
 </section>
 
