--- a/web/portal/cart8797.html
+++ b/web/portal/cart8797.html
@@ -27,7 +27,7 @@
 <![endif]-->
 
 <script type="text/javascript">
-    var csrfToken = 'f55d26e1e2b12b92ac516b6aaf2dad21e28fcd0a',
+    var csrfToken = '',
         markdownGuide = 'Guía de Markdown',
         locale = 'en',
         saved = 'guardado',
@@ -45,23 +45,12 @@
         });
         </script>
 
-<!-- Google Analytics -->
-<script>
-(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','../../www.google-analytics.com/analytics.js','ga');
 
-ga('create', 'UA-186698418-1', { cookieDomain: 'ifastnet.com' });
-ga('send', 'pageview');
-
-</script>
-<!-- End Google Analytics -->
 
 
         <link rel="stylesheet" type="text/css" href="templates/ifastnet-child/assets/css/style.css" media="screen">
         <link href="templates/ifastnet-child/css/custom.css" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="assets/img/favicon/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="page/assets/img/favicon/favicon.ico" />
     <link rel="icon" href="../favicon.ico" type="image/x-icon">
 </head>
 <body data-phone-cc-input="1">
@@ -80,8 +69,8 @@ ga('send', 'pageview');
                             <span class="icon-bar"></span>
                         </button>
                         <div class="logo">
-                            <a href="../index-2.html">
-                                <img class="small-logo img-responsive" src="templates/ifastnet-child/assets/images/logo.png" alt="logo">
+                            <a href="index.html">
+                                <img class="small-logo img-responsive" src="page/assets/img/pic/g95e8.webp" alt="logo">
                             </a>
                         </div>
                     </div>
@@ -91,7 +80,7 @@ ga('send', 'pageview');
                         <ul class="nav navbar-nav navbar-right">
 
                             <li >
-                                <a href="../index-2.html">Home</a>
+                                <a href="../index.html">Home</a>
                             </li>
 
                             <li>
@@ -519,7 +508,7 @@ ga('send', 'pageview');
                                 <div class="input-group input-group-lg input-group-box">
                                     <input type="text" name="domain" class="form-control" placeholder="Busque el nombre de dominio perfecto" value="" id="inputDomain" data-toggle="tooltip" data-placement="left" data-trigger="manual" title="Introduzca un dominio o palabra clave" />
                                     <span class="input-group-btn input-group-append">
-                                        <button type="submit" id="btnCheckAvailability" class="btn btn-primary domain-check-availability btn-recaptcha">Buscar</button>
+                                        <button type="submit" id="btnCheckAvailability" class="btn btn-primary domain-check-availability">Buscar</button>
                                     </span>
                                 </div>
                             </div>
@@ -2103,5 +2092,5 @@ jQuery(document).ready(function() {
 
 </body>
 
-<!-- Mirrored from ifastnet.com/portal/cart.php?a=add&domain=register&language=spanish by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 25 Aug 2022 16:12:03 GMT -->
+<!-- Mirrored from www.businessasesores.com.co/web/portal/cart8797.html?a=add&domain=register&language=spanish by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 25 Aug 2022 16:12:03 GMT -->
 </html>
