--- a/web/portal/cart8797.html
+++ b/web/portal/cart8797.html
@@ -853,6 +853,7 @@ jQuery(document).ready(function() {
         </div>
     </div>
 </section>
+<section id="footer">
     <footer id="footer">
         <div class="container">
             <div class="footer-parts">
@@ -863,7 +864,7 @@ jQuery(document).ready(function() {
                             <ul class="menu">
                                 <li><a href="../aboutus.html">About Us</a></li>
                                 <li><a href="../contact-us.html">Contact Us</a></li>
-                                <li><a href="http://blog.ifastnet.com/">Our Blog</a></li>
+                                
                                 <li><a href="../terms.html">Terms of Service</a></li>
                                 <li><a href="../privacy.html">Privacy Policy</a></li>
                                 <li><a href="../cancellation-refund.html">Cancellation & Refund</a></li>
@@ -888,8 +889,7 @@ jQuery(document).ready(function() {
                                 <li><a href="index804a.html">Login</a></li>
                                 <li><a href="register.html">Register</a></li>
                                 <li><a href="index804a.html">Affiliate System</a></li>
-                                <li><a href="http://kb.ifastnet.com/">knowledge base</a></li>
-                                <li><a href="http://support.ifastnet.com/">Submit Ticket</a></li>
+                                
                             </ul>
                         </div>
                         <div class="col-md-3 col-sm-6">
