--- a/web/portal/cart8797.html
+++ b/web/portal/cart8797.html
@@ -500,8 +500,8 @@
 
             <div class="domain-checker-container">
                 <div class="domain-checker-bg clearfix">
-                    <form method="post" action="https://ifastnet.com/portal/cart.php" id="frmDomainChecker">
-<input type="hidden" name="token" value="f55d26e1e2b12b92ac516b6aaf2dad21e28fcd0a" />
+                    <form method="post" action="" id="frmDomainChecker">
+<input type="hidden" name="token" value="" />
                         <input type="hidden" name="a" value="checkDomain">
                         <div class="row">
                             <div class="col-md-8 col-md-offset-2 offset-md-2 col-xs-10 col-xs-offset-1 col-10 offset-1">
@@ -853,7 +853,25 @@ jQuery(document).ready(function() {
         </div>
     </div>
 </section>
-<section id="footer">
+ </div> <!-- /wrapper_header -->
+<div class="wrapper_footer">
+    <section class="footer-get-started">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-7">
+                    <h2 class="head30">Get Your Website Online Today!</h2>
+                </div>
+                <div class="col-sm-5">
+                    <div class="col-md-6 col-sm-12">
+                        <div class="sp">Prices from<br><strong>$3.99</strong><span>/month</span></div>
+                    </div>
+                    <div class="col-md-6  col-sm-12">
+                        <a class="get-started" href="cart8d66.html?a=add&amp;pid=86">Get Started!</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <footer id="footer">
         <div class="container">
             <div class="footer-parts">
